# hashrope-bio

./: .gitignore  FINDINGS.md  PYO3_DEFERRED.md  README.md  pyproject.toml
benchmarks/: bench_construction.py  bench_cross_species.py  bench_mutation.py  bench_region_query.py  bench_repeats.py  bench_resistance.py  bench_resistance_drug_correlation.py  bench_resistance_realdata.py
data/: README.md  chr22_genes.tsv  clinvar_chr22_pathogenic_snvs.tsv  hivdb_rt_expanded_drug_scores.tsv  hivdb_rt_expanded_ground_truth.tsv  hivdb_rt_ground_truth.tsv  hivdb_rt_sierra_results.json
results/: amortization.json  clinvar_validation_rust_20260408T182945Z.json  clinvar_validation_rust_20260408T204850Z.json  construction.json  construction_rust_20260408T142316Z.json  cross_species_conservation.json  cross_species_rust.json  drug_resistance_correlation.json  mutation_localization_rust_20260408T163052Z.json  region_query_genes_rust.json  region_query_rust_20260408T143009Z.json  repeat_comparison_20260408T071409Z.json  repeat_construction_20260408T071409Z.json  resistance_panel_20260408T071435Z.json  resistance_panel_rust_20260408T072000Z.json  resistance_realdata_20260409T000814Z.json  resistance_realdata_20260409T001234Z.json
rust/: Cargo.toml  README.md
rust/benches/: bio_benchmarks.rs
rust/src/: gene.rs  gene_diff.rs  lib.rs  resistance.rs
scripts/: download_cross_species.py  download_data.py  download_gene_annotations.py  download_hivdb_expanded.py  download_hivdb_sequences.py  extract_clinvar_chr22.py
src/hashrope_bio/: __init__.py  result_output.py
src/hashrope_bio/cheminformatics/: __init__.py  compounds.py  resistance.py
src/hashrope_bio/genomics/: __init__.py  fasta.py  gene_diff.py  mutation.py  region_query.py  repeats.py
src/hashrope_bio/proteomics/: __init__.py  trajectory.py
tests/: test_cheminformatics.py  test_gene_diff.py  test_genomics.py  test_proteomics.py
