[package]
name = "hashrope-bio"
version = "0.2.0"
edition = "2021"
authors = ["Muntaser Syed <muntaser@ieee.org>"]
description = "Computational biology applications of hashrope — drug resistance panels, gene-level change detection, genomic region queries, tandem repeat analysis"
license = "MIT"
repository = "https://github.com/jemsbhai/hashrope-bio"
keywords = ["bioinformatics", "genomics", "hash-rope", "sequence-comparison", "drug-discovery"]
categories = ["science", "algorithms"]
readme = "README.md"
include = ["src/**/*", "benches/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
hashrope = { version = "0.2.1", path = "../../../../packages/rust" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bio_benchmarks"
harness = false
